--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               </li>
             </ul>
           </h3>
-            <p>Low-Rent is a mock Online Clothing Store where you select the items that you like and add them to your cart for further purchase.</p>
+            <p>Low-Rent is a mock Online Clothing Store where you select the items that you like and add them to your cart for further purchase. Tech stack used: React.js/Ruby on Rails</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project2.png" class="image fit thumb"
@@ -94,7 +94,7 @@
 				</li>
 			  </ul>
       </h3>
-            <p>A simple web application to track COVID-19 cases and stats by country.</p>
+            <p>A simple web application to track COVID-19 cases and stats by country using simple HTML/CSS and JavaScript stack.</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project4.png" class="image fit thumb"
@@ -112,7 +112,7 @@
 				  </li>
 				</ul>
       </h3>
-            <p>Fully responsive Movie App where you can search the movies you want and add them to your Favorites section.</p>
+            <p>Fully responsive Movie App where you can search the movies you want and add them to your Favorites section using React.js</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project3.png" class="image fit thumb"
@@ -130,7 +130,7 @@
 			  </li>
 			</ul>
     </h3>
-            <p>Here is a web application that lets you create a player database, then create your own teams and add your favorite players to your lineup!!! Also you can post comments to any of your teams.</p>
+            <p>Here is a web application that lets you create a player database, then create your own teams and add your favorite players to your lineup!!! Also you can post comments to any of your teams. I used Node.js/Express.js and MongoDB</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project7.png" class="image fit thumb"
@@ -158,15 +158,15 @@
             <ul class="actions">
 				<li>
 					<a
-					  href="https://videogame-blog.netlify.app/"
+					  href="https://josepizza.netlify.app/"
 					  target="_blank"
 					  class="button"
-					  >Videogame Blog</a
+					  >Jose's Pizza</a
 					>
 				  </li>
 				</ul>
       </h3>
-            <p>Videogame Blog is a Web App where you can upload previous games you've played, rate them and give some tips to other gamers on how to enjoy that specific videogame. You can also upload a poster image of the game when uploading the blog.</p>
+            <p>A React project inspired by my favorite food, Pizza! Fully responsive site to practice my React.js skills. </p>
           </article>
         </div></br>
 		<ul class="actions">
