added new project under construction

--- a/index.html
+++ b/index.html
@@ -168,6 +168,24 @@
       </h3>
             <p>A React project inspired by my favorite food, Pizza! Fully responsive site to practice my React.js skills. </p>
           </article>
+          <article class="col-6 col-12-xsmall work-item">
+            <a href="images/project8.png" class="image fit thumb"
+              ><img src="images/project8.png" alt=""
+            /></a>
+            <h3>
+            <ul class="actions">
+				<li>
+					<a
+					  href="https://github.com/josedguti/react-complete-guide"
+					  target="_blank"
+					  class="button"
+					  >Expense Tracker</a
+					>
+				  </li>
+				</ul>
+      </h3>
+            <p>Udemy course I'm currently taking to practice all the React.js basics and cores. Project currently under work, follow to see the code advances.</p>
+          </article>
         </div></br>
 		<ul class="actions">
 		  <li><a href="https://github.com/josedguti/" target="_blank" class="button">Check my GitHub for more... </a></li>
