added new project

--- a/index.html
+++ b/index.html
@@ -79,22 +79,22 @@
             <p>Low-Rent is a mock Online Clothing Store where you select the items that you like and add them to your cart for further purchase. Tech stack used: React.js/Ruby on Rails</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/project2.png" class="image fit thumb"
-              ><img src="images/project2.png" alt=""
+            <a href="images/project9.png" class="image fit thumb"
+              ><img src="images/project9.png" alt=""
             /></a>
             <h3>
 			<ul class="actions">
 				<li>
 				  <a
-					href="https://covid-19-tracker-webapp-jd.netlify.app/"
+					href="https://joses-fun-api-josedguti.vercel.app/"
 					target="_blank"
 					class="button"
-					>COVID-19 Tracker</a
+					>Jose's Fun API</a
 				  >
 				</li>
 			  </ul>
       </h3>
-            <p>A simple web application to track COVID-19 cases and stats by country using simple HTML/CSS and JavaScript stack.</p>
+            <p>This is Next.js app where I implemented the Tailwind CSS and Next-Auth technologies. Just having fun with the Rick and Morty API.</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project4.png" class="image fit thumb"
@@ -133,22 +133,22 @@
             <p>Here is a web application that lets you create a player database, then create your own teams and add your favorite players to your lineup!!! Also you can post comments to any of your teams. I used Node.js/Express.js and MongoDB</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/project7.png" class="image fit thumb"
-              ><img src="images/project7.png" alt=""
+            <a href="images/project2.png" class="image fit thumb"
+              ><img src="images/project2.png" alt=""
             /></a>
             <h3>
 			<ul class="actions">
 				<li>
-					<a
-					  href="https://lucrun.netlify.app/"
-					  target="_blank"
-					  class="button"
-					  >Luc Run</a
-					>
-				  </li>
-				</ul>
+				  <a
+					href="https://covid-19-tracker-webapp-jd.netlify.app/"
+					target="_blank"
+					class="button"
+					>COVID-19 Tracker</a
+				  >
+				</li>
+			  </ul>
       </h3>
-            <p>Fully responsive Website using React that I'm building for an aspiring client who's a Running coach in France</p>
+            <p>My first Web App. This is a simple application to track COVID-19 cases and stats by country using simple HTML/CSS and JavaScript stack.</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project6.png" class="image fit thumb"
@@ -166,7 +166,7 @@
 				  </li>
 				</ul>
       </h3>
-            <p>A React project inspired by my favorite food, Pizza! Fully responsive site to practice my React.js skills. </p>
+            <p>A React project inspired by my favorite food, Pizza! Fully responsive site to practice my styling React.js skills. </p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project8.png" class="image fit thumb"
