updated photo and link to email

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- Header -->
     <header id="header">
       <div class="inner">
-        <a href="#" class="image avatar"
-          ><img src="images/josepic.png" alt=""
+        <a href="/" class="image avatar"
+          ><img src="images/profilepicture.png" alt=""
         /></a>
         <h1>
-          <strong>Hi! I'm Jose Gutierrez</strong>, just a developer<br />
+          <strong>Hey! I'm Jose Gutierrez</strong>, just a developer<br />
           looking to showcase my abilities<br />
           and skills
         </h1>
@@ -31,18 +31,18 @@
       <section id="one">
         <header class="major">
           <h2>
-            I am a Full-Stack Developer with a background in customer service
+            I'm a Software Engineer with a background in customer service
             and IT Support.
           </h2>
         </header>
         <p>
-          I am a goal-oriented individual seeking opportunities to continue to
-          learn and contribute to a team in the Software Development industry. I
-          have experience with front-end development such as HTML, CSS and
-          JavaScript, MERN Stack (MongoDB, Express.js, React.js and Node.js) and
-          also experience programming with back-end technologies such as Ruby on
-          Rails and Python/Django.
-        </p>
+          Looking for more opportunities to continue to learn
+          and contribute to a team in the Software Development industry. I
+          have hands-on experience with front-end development technologies
+          such as HTML, CSS (Bootstrap and TailwindCSS), JavaScript,
+          React.js, Next.js as well as working with databases such as MySQL,
+          PostgreSQL and MongoDB. Worked as well with back-end technologies
+          such as Node.js and Ruby on Rails.
         <ul class="actions">
           <li>
             <a
@@ -188,10 +188,10 @@
           </article>
         </div></br>
 		<ul class="actions">
-		  <li><a href="https://github.com/josedguti/" target="_blank" class="button">Check my GitHub for more... </a></li>
+		  <li><a href="https://github.com/josedguti/" target="_blank" class="button">Check out my GitHub</a></li>
 		</ul>
 		<ul class="actions">
-		  <li><a href="files/JoseGutierrezResume.pdf" target="_blank" class="button">Check My Resume</a></li>
+		  <li><a href="files/JoseGutierrezResume.pdf" target="_blank" class="button">Resume CV</a></li>
 		</ul>
 	</section>
 
@@ -225,6 +225,7 @@
                   ></textarea>
                 </div>
               </div>
+              <br>
 			  <ul class="actions">
 				  <li><input type="submit" value="Send Message" /></li>
 				</ul>
@@ -235,7 +236,7 @@
 						<h3 class="icon solid fa-envelope">
 							<span class="label">Email</span>
 						</h3>
-						<a href="#">josepmind@gmail.com</a>
+						<a href="mailto:josepmind@gmail.com">josepmind@gmail.com</a>
 					</li>
 				</ul>
 			</form>
@@ -266,7 +267,7 @@
           </li>
         </ul>
         <ul class="copyright">
-          <li>Copyright &copy; All Rights Reserved</li>
+          <li>&copy; 2022 Jose Gutierrez. All Rights Reserved</li>
         </ul>
       </div>
     </footer>
