--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
         <div class="row">
           <article class="col-6 col-12-xsmall work-item">
             <a href="https://low-rent.netlify.app/"
-              ><a href="images/project1.png" class="image fit thumb"
-                ><img src="images/project1.png" alt="" /></a
+              ><a href="images/project10.png" class="image fit thumb"
+                ><img src="images/project10.png" alt="" /></a
             ></a>
             <h3>
             <ul class="actions">
               <li>
                 <a
-                  href="https://low-rent.netlify.app/"
+                  href="https://slingshot.dabble.dev/"
                   target="_blank"
                   class="button"
-                  >Low-Rent Clothing Store</a
+                  >Slingshot PMS</a
                 >
               </li>
             </ul>
           </h3>
-            <p>Low-Rent is a mock Online Clothing Store where you select the items that you like and add them to your cart for further purchase. Tech stack used: React.js/Ruby on Rails</p>
+            <p>Slingshot is a Project Managemen System prototype that lets clients create their projects and requirements and them mantainers can estimate a work item or add notes. Made with Next.js/TailwindCSS/Prisma/MySQL.</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project9.png" class="image fit thumb"
@@ -92,10 +92,28 @@
 					>Jose's Fun API</a
 				  >
 				</li>
-			  </ul>
-      </h3>
-            <p>This is Next.js app where I implemented the Tailwind CSS and Next-Auth technologies. Just having fun with the Rick and Morty API.</p>
-          </article>
+      </ul>
+    </h3>
+    <p>This is a Next.js app where I implemented the Tailwind CSS and Next-Auth technologies. Just having fun with the Rick and Morty API.</p>
+  </article>
+  <article class="col-6 col-12-xsmall work-item">
+    <a href="images/project1.png" class="image fit thumb"
+      ><img src="images/project1.png" alt=""
+    /></a>
+    <h3>
+<ul class="actions">
+<li>
+  <a
+  href="https://low-rent.netlify.app/"
+  target="_blank"
+  class="button"
+  >Low-Rent Clothing Store</a
+  >
+</li>
+</ul>
+</h3>
+    <p>Low-Rent is a mock Online Clothing Store where you select the items that you like and add them to your cart for further purchase. Tech stack used: React.js/Ruby on Rails.</p>
+  </article>
           <article class="col-6 col-12-xsmall work-item">
             <a href="images/project4.png" class="image fit thumb"
               ><img src="images/project4.png" alt=""
@@ -115,6 +133,24 @@
             <p>Fully responsive Movie App where you can search the movies you want and add them to your Favorites section using React.js</p>
           </article>
           <article class="col-6 col-12-xsmall work-item">
+            <a href="images/project6.png" class="image fit thumb"
+              ><img src="images/project6.png" alt=""
+            /></a>
+            <h3>
+            <ul class="actions">
+        <li>
+          <a
+            href="https://josepizza.netlify.app/"
+            target="_blank"
+            class="button"
+            >Jose's Pizza</a
+          >
+          </li>
+        </ul>
+      </h3>
+            <p>A React project inspired by my favorite food, Pizza! Fully responsive site to practice my styling React.js skills using styled components. </p>
+      </article>
+          <article class="col-6 col-12-xsmall work-item">
             <a href="images/project3.png" class="image fit thumb"
               ><img src="images/project3.png" alt=""
             /></a>
@@ -131,60 +167,6 @@
 			</ul>
     </h3>
             <p>Here is a web application that lets you create a player database, then create your own teams and add your favorite players to your lineup!!! Also you can post comments to any of your teams. I used Node.js/Express.js and MongoDB</p>
-          </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/project2.png" class="image fit thumb"
-              ><img src="images/project2.png" alt=""
-            /></a>
-            <h3>
-			<ul class="actions">
-				<li>
-				  <a
-					href="https://covid-19-tracker-webapp-jd.netlify.app/"
-					target="_blank"
-					class="button"
-					>COVID-19 Tracker</a
-				  >
-				</li>
-			  </ul>
-      </h3>
-            <p>My first Web App. This is a simple application to track COVID-19 cases and stats by country using simple HTML/CSS and JavaScript stack.</p>
-          </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/project6.png" class="image fit thumb"
-              ><img src="images/project6.png" alt=""
-            /></a>
-            <h3>
-            <ul class="actions">
-				<li>
-					<a
-					  href="https://josepizza.netlify.app/"
-					  target="_blank"
-					  class="button"
-					  >Jose's Pizza</a
-					>
-				  </li>
-				</ul>
-      </h3>
-            <p>A React project inspired by my favorite food, Pizza! Fully responsive site to practice my styling React.js skills. </p>
-          </article>
-          <article class="col-6 col-12-xsmall work-item">
-            <a href="images/project8.png" class="image fit thumb"
-              ><img src="images/project8.png" alt=""
-            /></a>
-            <h3>
-            <ul class="actions">
-				<li>
-					<a
-					  href="https://github.com/josedguti/react-complete-guide"
-					  target="_blank"
-					  class="button"
-					  >Expense Tracker</a
-					>
-				  </li>
-				</ul>
-      </h3>
-            <p>Udemy course I'm currently taking to practice all the React.js basics and cores. Project currently under work, follow to see the code advances.</p>
           </article>
         </div></br>
 		<ul class="actions">
