replace a project with another more current one

--- a/index.html
+++ b/index.html
@@ -151,22 +151,22 @@
             <p>A React project inspired by my favorite food, Pizza! Fully responsive site to practice my styling React.js skills using styled components. </p>
       </article>
           <article class="col-6 col-12-xsmall work-item">
-            <a href="images/project3.png" class="image fit thumb"
-              ><img src="images/project3.png" alt=""
+            <a href="images/project11.png" class="image fit thumb"
+              ><img src="images/project11.png" alt=""
             /></a>
             <h3>
 			<ul class="actions">
 			<li>
 				<a
-				  href="https://nba-project-app.herokuapp.com/teams"
+				  href="https://covid-19-tracker-next.vercel.app/"
 				  target="_blank"
 				  class="button"
-				  >NBA Fantasy Draft</a
+				  >COVID-19 Tracker</a
 				>
 			  </li>
 			</ul>
     </h3>
-            <p>Here is a web application that lets you create a player database, then create your own teams and add your favorite players to your lineup!!! Also you can post comments to any of your teams. I used Node.js/Express.js and MongoDB</p>
+            <p>This a Next.js/TailwindCSS Web App where you obtain COVID-19 data of number of cases and deaths per country.</p>
           </article>
         </div></br>
 		<ul class="actions">
