changed url of slingshot project

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <ul class="actions">
               <li>
                 <a
-                  href="https://slingshot.dabble.dev/"
+                  href="https://slingshot-project.vercel.app/"
                   target="_blank"
                   class="button"
                   >Slingshot PMS</a
